--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^2.8.4",
     "prettier-plugin-solidity": "^1.1.3",
-    "solc-0.8": "npm:solc@0.8.20",
+    "solc-0.8": "npm:solc@0.8.19",
     "solidity-coverage": "^0.7.22",
     "solidity-docgen": "^0.5.17"
   },
@@ -64,7 +64,7 @@
     "test": "npx hardhat test test/contracts/**.test.js",
     "docgen": "npx solidity-docgen --solc-module solc-0.8 -t ./docs/templates -e ./contracts/verifiers,./contracts/mocks",
     "prepare:testnet:ZkEVM:localhost": "npx hardhat run deployment/testnet/prepareTestnet.js --network localhost",
-    "deploy:ZkEVM:localhost": "rm -f .openzeppelin/unknown-31337.json && node deployment/1_createGenesis.js && npx hardhat run deployment/2_deployPolygonZKEVMDeployer.js --network localhost && npx hardhat run deployment/3_deployContracts.js --network localhost",
+    "deploy:ZkEVM:localhost": "rm -f .openzeppelin/*.json && node deployment/1_createGenesis.js && npx hardhat run deployment/2_deployPolygonZKEVMDeployer.js --network localhost && npx hardhat run deployment/3_deployContracts.js --network localhost",
     "deploy:testnet:ZkEVM:localhost": "npm run prepare:testnet:ZkEVM:localhost && npm run deploy:ZkEVM:localhost",
     "prepare:testnet:ZkEVM:goerli": "npx hardhat run deployment/testnet/prepareTestnet.js --network goerli",
     "deploy:ZkEVM:goerli": "node deployment/1_createGenesis.js && npx hardhat run deployment/3_deployContracts.js --network goerli && npm run saveDeployment:goerli",
